styles: fixed label positioning on mobile

--- a/src/styles/pages/Contact.module.scss
+++ b/src/styles/pages/Contact.module.scss
@@ -23,8 +23,6 @@
   background-color: black;
   display: none;
   .mask-content {
-    padding-top: 6em;
-
     .title,
     .subtitle {
       color: #808080;
@@ -32,7 +30,7 @@
   }
 }
 .unmask-content {
-  padding-top: 6em;
+  padding-top: 1em;
 }
 .contact-section {
   width: auto;
@@ -70,16 +68,17 @@
 
   .grid {
     width: 100%;
+    display: grid;
 
     margin-top: 3em;
     margin-bottom: 3em;
+
     .grid-item-media {
       justify-content: center;
       display: flex;
       align-items: center;
       gap: 2em;
-      position: relative;
-      z-index: 2;
+
       margin-top: 4em;
       margin-bottom: 4em;
       .icon {
@@ -87,12 +86,14 @@
       }
     }
     .grid-item-form {
+      position: relative;
       .form {
         position: relative;
-        width: 300px;
-        z-index: 2;
+        width: auto;
+
         display: grid;
         align-items: center;
+
         .btn {
           line-height: normal;
           margin-top: 3em;
@@ -108,10 +109,15 @@
           border: none;
           margin-bottom: 1.5em;
           margin-top: 1.5em;
+          position: relative;
+          width: 100%;
+
           .label {
             font-weight: 400;
             margin-bottom: 1.1em;
             display: block;
+            width: 100%;
+            position: relative;
             color: black;
             transition: 0.3s ease;
           }
@@ -127,6 +133,7 @@
           .message-field {
             border: none;
             border-bottom: 1px solid #b2b0b0;
+            position: relative;
             &:focus {
               border-top: none !important;
               border-left: none !important;
@@ -160,6 +167,12 @@
 @media (min-width: 800px) {
   .mask {
     display: block;
+    .mask-content {
+      padding-top: 6em;
+    }
+  }
+  .unmask-content {
+    padding-top: 6em;
   }
   .contact-section {
     .grid {
@@ -167,6 +180,9 @@
       display: grid;
       .grid-item-form {
         grid-column: 1/8;
+        .form {
+          width: 300px;
+        }
       }
       .grid-item-media {
         grid-column: -1;
